fix z-index

--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,7 @@ body{
 #MainPic{
    height:500px;
    position:relative;
+   z-index:0;
 }
 
 #MainPic img{
